--- a/css/map.css
+++ b/css/map.css
@@ -1,58 +1,32 @@
-html, body, #map-canvas {
-  height: 100%;
-  margin: 0px;
-  padding: 0px
-}
-
 #map-canvas {
-  height: 90%;
-  margin: 0px;
-  padding: 0px
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-.controls {
-  margin-top: 16px;
-  border: 1px solid transparent;
-  border-radius: 2px 0 0 2px;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  height: 32px;
-  outline: none;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+md-card > img {
 }
 
-#pac-input {
-  background-color: #fff;
-  font-family: Roboto;
-  font-size: 15px;
-  font-weight: 300;
-  margin-left: 12px;
-  padding: 0 11px 0 13px;
-  text-overflow: ellipsis;
-  width: 400px;
+md-slider {
+  margin-top: 32px;
 }
 
-#pac-input:focus {
-  border-color: #4d90fe;
-}
-
-.pac-container {
-  font-family: Roboto;
-}
-
-#type-selector {
-  color: #fff;
-  background-color: #4d90fe;
-  padding: 5px 11px 0px 11px;
-}
-
-#type-selector label {
-  font-family: Roboto;
-  font-size: 13px;
-  font-weight: 300;
+.autocompletedemoBasicUsage {
+  position: fixed;
+  top: 0;
 }
 
 /* angular-material slider */
+.sliderdemoBasicUsag {
+  position: fixed;
+  bottom: 0;
+  padding-top: 100px;
+}
+
 .sliderdemoBasicUsage input[type="number"] {
   text-align: center;
+}
+
+.carddemoBasicUsage md-card {
+  min-height: 150px;
 }
